--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
       Hi! I am Priyanshu.
+       I study at KIIT.
+
+       I have worked on few CLI apps. I'll Showcase it here tomorrow.
+
+       I like to play Cricket. 
 </body>
 </html>
